kubernetes/13-network-policies/03-network-policy-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: network-policy-lab
spec:
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
