kubernetes/13-network-policies/02-allow-client-to-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-server
  namespace: network-policy-lab
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
        - namespaceSelector:
            matchLabels:
              purpose: network-policy-client
          podSelector:
            matchLabels:
              app: client
      ports:
        - protocol: TCP
          port: 80
